--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <title>battlescript</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="/bundle.js"></script>
   </head>
   <body>
